Migrate from fishjam-dev to fishjam-cloud organization

--- a/examples/room-manager/docker-compose.yaml
+++ b/examples/room-manager/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   fishjam:
-    image: 'ghcr.io/fishjam-dev/fishjam:${FISHJAM_VERSION:-edge}'
+    image: 'ghcr.io/fishjam-cloud/fishjam:${FISHJAM_VERSION:-edge}'
     container_name: fishjam
     restart: on-failure
     healthcheck:
