--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@fishjam-cloud/js-server-sdk": "file:../..",
+    "@types/body-parser": "^1.19.5",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
