--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "build:check": "tsc -p tsconfig.json --noEmit",
     "start": "tsx watch ./src/index.ts"
   },
   "author": "",
