--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,5 +61,5 @@ jobs:
       - name: Check Room Manager example
         working-directory: examples/room-manager
         run: |
-          npm ci
-          npm run build:check
+          yarn --frozen-lockfile
+          yarn build:check
