--- a/examples/room-manager/docker-compose-dev.yaml
+++ b/examples/room-manager/docker-compose-dev.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   jellyfish:
-    image: "ghcr.io/jellyfish-dev/jellyfish:${JELLYFISH_VERSION:-edge}"
+    image: "ghcr.io/jellyfish-dev/jellyfish:${FISHJAM_VERSION:-edge}"
     container_name: jellyfish
     restart: on-failure
     healthcheck:
