--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -8,7 +8,7 @@
     "build:check": "tsc -p tsconfig.json --noEmit",
     "start": "tsx watch ./src/index.ts"
   },
-  "author": "",
+  "author": "Fishjam Cloud Team",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/env": "^4.3.0",
