--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -1,54 +1,26 @@
 {
-  "name": "@fishjam-cloud/room-manager",
-  "version": "0.1.0",
-  "description": "A room manager for Fishjam",
-  "homepage": "https://github.com/fishjam-cloud/js-server-sdk/examples/room-manager",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/fishjam-cloud/js-server-sdk.git"
-  },
-  "license": "Apache-2.0",
-  "keywords": [
-    "webrtc",
-    "fishjam",
-    "membrane"
-  ],
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "name": "room-manager",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "tsx watch ./src/index.ts",
-    "build": "tsc",
-    "build:check": "tsc --noEmit",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "lint": "eslint src --fix",
-    "lint:check": "eslint src"
+    "build": "tsc -p tsconfig.json",
+    "build:check": "tsc -p tsconfig.json --noEmit",
+    "start": "tsx watch ./src/index.ts"
   },
+  "author": "Fishjam Cloud Team",
   "dependencies": {
-    "@fishjam-cloud/js-server-sdk": "file:../..",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/env": "^4.3.0",
+    "@fishjam-cloud/js-server-sdk": "file:../../",
     "axios": "^1.6.8",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "fastify": "^4.26.2",
+    "ts-proto": "^1.171.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^9.1.1",
-    "@types/express": "^4.17.21",
     "@types/node": "^20.12.5",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "globals": "^15.0.0",
-    "prettier": "^3.2.5",
+    "pino-pretty": "^11.0.0",
     "tsx": "^4.7.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.4"
   }
 }
