--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,9 @@ jobs:
           node-version: 20
           cache: npm
 
+      - name: Enable corepack
+        run: corepack enable
+
       - name: Install dependencies
         run: yarn --frozen-lockfile
 
