--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/node": "^20.12.5",
     "pino-pretty": "^11.0.0",
+    "tsc": "^2.0.4",
     "tsx": "^4.7.2",
     "typescript": "~5.4.4"
   }
