--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
     "typescript": "^5.4.5"
+  },
+  "scripts": {
+    "build:check": "yarn workspaces foreach -A -p run build:check"
   }
 }
