--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "private": true,
   "workspaces": [
-    "packages/fishjam-openapi",
-    "packages/fishjam-proto",
-    "packages/js-server-sdk",
+    "packages/*",
     "examples/*"
   ],
   "packageManager": "yarn@4.3.1",
