--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Build and bump package version in examples
         run: |
-          yarn --frozen-lockfile && cd examples
+          yarn --immutable && cd examples
           cd room-manager && yarn add @fishjam-cloud/js-server-sdk && cd ..
 
       # Commit changes
