--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/env": "^4.3.0",
-    "@fishjam-cloud/js-server-sdk": "*",
+    "@fishjam-cloud/js-server-sdk": "workspace:*",
     "axios": "^1.6.8",
     "fastify": "^4.26.2"
   },
