--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -48,8 +48,8 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "fishjam-openapi": "*",
-    "fishjam-proto": "*"
+    "fishjam-openapi": "workspace:*",
+    "fishjam-proto": "workspace:*"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.13.4",
