--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,51 +15,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Enable corepack
+        run: corepack enable
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm
+          node-version: 21
+          cache: yarn
 
       - name: Install dependencies
-        run: yarn --frozen-lockfile
+        run: yarn --immutable
 
       - name: Check formatting
         run: yarn format:check
 
+      - name: Build SDK
+        run: yarn build:sdk
+
       - name: Check typing
         run: yarn build:check
-
-      - name: Check docs
-        run: yarn docs
-
-  check-examples:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        directory: [examples/room-manager]
-
-    defaults:
-      run:
-        working-directory: ${{ matrix.directory }}
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-
-      - name: Install SDK
-        working-directory: .
-        run: yarn --frozen-lockfile
-
-      - name: Check Room Manager example
-        working-directory: examples/room-manager
-        run: |
-          yarn --frozen-lockfile
-          yarn build:check
