--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,8 +7,17 @@ on:
       release-type:
         type: choice
         required: true
-        description: 'The release type that will be passed to npm version command'
-        options: ['patch', 'minor', 'major', 'prepatch', 'preminor', 'premajor', 'prerelease']
+        description: "The release type that will be passed to npm version command"
+        options:
+          [
+            "patch",
+            "minor",
+            "major",
+            "prepatch",
+            "preminor",
+            "premajor",
+            "prerelease",
+          ]
 
 jobs:
   release:
@@ -40,8 +49,11 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 21
           registry-url: https://registry.npmjs.org/
+
+      - name: Enable corepack
+        run: corepack enable
 
       # Bump package version
       # Use tag 'latest'
@@ -65,7 +77,7 @@ jobs:
 
       - name: Build and bump package version in examples
         run: |
-          yarn --frozen-lockfile && cd examples
+          yarn --immutable && cd examples
           cd room-manager && yarn add @fishjam-cloud/js-server-sdk && cd ..
 
       # Commit changes
