Fix docker context in gh actions

--- a/.github/workflows/build-room-manager.yaml
+++ b/.github/workflows/build-room-manager.yaml
@@ -1,4 +1,4 @@
-name: Build Room Manager
+name: Build and Push Room Manager Image
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
             - name: Build and push Docker image
               uses: docker/build-push-action@v6
               with:
-                context: examples/room-manager
+                file: examples/room-manager/Dockerfile
                 platforms: linux/amd64, linux/arm64
                 push: true
                 cache-from: type=gha
