--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -35,8 +35,8 @@
   },
   "tsup": {
     "entry": [
-      "src/proto.ts",
-      "src/index.ts"
+      "src/index.ts",
+      "src/proto.ts"
     ],
     "dts": true,
     "minify": true,
@@ -58,6 +58,7 @@
     "@types/websocket": "^1.0.10",
     "prettier": "3.2.5",
     "tsup": "^8.1.0",
+    "typed-emitter": "^2.1.0",
     "typedoc": "^0.25.13",
     "typescript": "~5.4.5"
   }
