--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -49,13 +49,16 @@
   "dependencies": {
     "axios": "^1.6.8",
     "fishjam-openapi": "workspace:*",
-    "fishjam-proto": "workspace:*"
+    "fishjam-proto": "workspace:*",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.13.4",
     "@types/node": "^20.12.7",
+    "@types/websocket": "^1.0.10",
     "prettier": "3.2.5",
     "tsup": "^8.1.0",
+    "typed-emitter": "^2.1.0",
     "typedoc": "^0.25.13",
     "typescript": "~5.4.5"
   }
