--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 node_modules
-.yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 .env
 
 # IntelliJ
