--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -47,9 +47,9 @@
     "outDir": "dist"
   },
   "dependencies": {
+    "@fishjam-cloud/fishjam-openapi": "workspace:*",
+    "@fishjam-cloud/fishjam-proto": "workspace:*",
     "axios": "^1.6.8",
-    "fishjam-openapi": "workspace:*",
-    "fishjam-proto": "workspace:*",
     "websocket": "^1.0.35"
   },
   "devDependencies": {
