Add basic ts check

--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -7,7 +7,8 @@
     "build": "tsc -p tsconfig.json",
     "build:check": "tsc -p tsconfig.json --noEmit",
     "start": "tsx watch ./src/index.ts",
-    "gen:openapi": "tsx scripts/generate-openapi-schema.ts"
+    "gen:openapi": "tsx scripts/generate-openapi-schema.ts",
+    "typecheck": "tsc"
   },
   "author": "Fishjam Cloud Team",
   "dependencies": {
