--- a/packages/fishjam-openapi/package.json
+++ b/packages/fishjam-openapi/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "packageManager": "yarn@4.3.0",
   "scripts": {
-    "codegen": "sh openapi.sh"
+    "codegen": "sh openapi.sh",
+    "typecheck": "tsc"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.13.4"
