--- a/packages/fishjam-openapi/package.json
+++ b/packages/fishjam-openapi/package.json
@@ -2,10 +2,10 @@
   "name": "@fishjam-cloud/fishjam-openapi",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "yarn@4.3.0",
   "scripts": {
     "codegen": "sh openapi.sh",
-    "typecheck": "tsc"
+    "build": "tsc",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.13.4"
