[FCE-354] Use proper package names + fix yarn configuration (#18)
## Description

Update packages to use `@fishjam-cloud` prefix
Add missing `yarn` files
Add proper ts check for all libraries and example

## Motivation and Context

This is preparation for automated release

## Types of changes

- [ ] Bug fix (non-breaking change which fixes an issue)
- [x] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to
      not work as expected)

--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "build:check": "tsc -p tsconfig.json --noEmit",
     "start": "tsx watch ./src/index.ts",
-    "gen:openapi": "tsx scripts/generate-openapi-schema.ts"
+    "gen:openapi": "tsx scripts/generate-openapi-schema.ts",
+    "typecheck": "tsc"
   },
   "author": "Fishjam Cloud Team",
   "dependencies": {
