--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 node_modules
-.yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 .env
+
+**/dist/**
 
 # IntelliJ
 *.iml
