--- a/packages/fishjam-openapi/package.json
+++ b/packages/fishjam-openapi/package.json
@@ -1,7 +1,18 @@
 {
   "name": "@fishjam-cloud/fishjam-openapi",
-  "version": "1.0.0",
-  "private": true,
+  "version": "0.1.1",
+  "description": "Fishjam OpenAPI",
+  "homepage": "https://github.com/fishjam-cloud/js-server-sdk",
+  "author": "Fishjam Cloud Team",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fishjam-cloud/js-server-sdk.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fishjam-cloud/js-server-sdk/issues"
+  },
+  "license": "Apache-2.0",
+  "main": "src/index.ts",
   "scripts": {
     "codegen": "sh openapi.sh",
     "build": "tsc",
@@ -9,6 +20,5 @@
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.13.4"
-  },
-  "main": "src/index.ts"
+  }
 }
