--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@fishjam-cloud/js-server-sdk",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Fishjam server SDK for JavaScript",
   "homepage": "https://github.com/fishjam-cloud/js-server-sdk",
+  "author": "Fishjam Cloud Team",
   "repository": {
     "type": "git",
     "url": "https://github.com/fishjam-cloud/js-server-sdk.git"
