[FCE-355] Add docs (#19)
## Description

Add basic docs for project generated by typedoc

Also update/add README files to have basic description on what is going
on here
## Motivation and Context

Why is this change required? What problem does it solve? If it fixes an
open
issue, please link to the issue here.

## Types of changes

- [ ] Bug fix (non-breaking change which fixes an issue)
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to
      not work as expected)

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   ],
   "packageManager": "yarn@4.3.1",
   "devDependencies": {
+    "typedoc": "^0.26.5",
+    "typedoc-material-theme": "^1.1.0",
     "typescript": "^5.4.5"
   },
   "scripts": {
     "build": "yarn workspace @fishjam-cloud/js-server-sdk build",
-    "typecheck": "yarn workspaces foreach -A -p run typecheck"
+    "typecheck": "yarn workspaces foreach -A -p run typecheck",
+    "docs": "typedoc"
   }
 }
