--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -57,9 +57,6 @@
     "@types/node": "^20.12.7",
     "@types/websocket": "^1.0.10",
     "prettier": "3.2.5",
-    "tsup": "^8.1.0",
-    "typed-emitter": "^2.1.0",
-    "typedoc": "^0.25.13",
-    "typescript": "~5.4.5"
+    "typed-emitter": "^2.1.0"
   }
 }
