--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "build": "yarn workspaces foreach -A run build",
+    "build": "yarn workspaces foreach -At run build",
     "typecheck": "yarn workspaces foreach -A -p run typecheck",
     "docs": "typedoc"
   }
