[NO-TICKET] Fix build script for fishjam-proto and fishjam-openapi packages (#23)
## Description

It seems that our small packages (`@fishjam-cloud/fishjam-proto` and
`@fishjam-cloud/fishjam-openapi`) have broken build process. This PR
tries to fix it by adding better build configuration.

## Motivation and Context

I'm trying to fix build for [this
PR](https://github.com/fishjam-cloud/mobile-client-sdk/pull/66), and it
seems that it is bug in current repo

## Types of changes

- [ ] Bug fix (non-breaking change which fixes an issue)
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to
      not work as expected)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^5.5.4"
   },
   "scripts": {
-    "build": "yarn workspace @fishjam-cloud/js-server-sdk build",
+    "build": "yarn workspaces foreach -At run build",
     "typecheck": "yarn workspaces foreach -A -p run typecheck",
     "docs": "typedoc"
   }
