--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -58,8 +58,6 @@
     "@types/websocket": "^1.0.10",
     "prettier": "3.3.3",
     "tsup": "^8.2.4",
-    "typed-emitter": "^2.1.0",
-    "typedoc": "^0.26.6",
-    "typescript": "~5.5.4"
+    "typed-emitter": "^2.1.0"
   }
 }
