Do not minify server-side code
This is done to make debugging easier for end users.
Performance gains from minifying server-side code are negligible.

--- a/packages/fishjam-openapi/package.json
+++ b/packages/fishjam-openapi/package.json
@@ -30,7 +30,7 @@
       "src/index.ts"
     ],
     "dts": true,
-    "minify": true,
+    "minify": false,
     "format": [
       "cjs",
       "esm"
