--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -39,7 +39,7 @@
       "src/proto.ts"
     ],
     "dts": true,
-    "minify": true,
+    "minify": false,
     "format": [
       "cjs",
       "esm"
