--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -7,7 +7,9 @@
     "build": "tsc -p tsconfig.json",
     "start": "tsx watch ./src/index.ts",
     "gen:openapi": "tsx scripts/generate-openapi-schema.ts",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "author": "Fishjam Cloud Team",
   "dependencies": {
@@ -23,6 +25,7 @@
     "@fastify/swagger": "^8.14.0",
     "@types/node": "^22.5.5",
     "pino-pretty": "^11.2.2",
+    "prettier": "^3.3.3",
     "tsc": "^2.0.4",
     "tsx": "^4.19.1",
     "typescript": "~5.6.2"
