--- a/examples/room-manager/docker-compose-dev.yaml
+++ b/examples/room-manager/docker-compose-dev.yaml
@@ -1,8 +1,8 @@
-version: "3"
+version: '3'
 
 services:
   jellyfish:
-    image: "ghcr.io/jellyfish-dev/jellyfish:${FISHJAM_VERSION:-edge}"
+    image: 'ghcr.io/jellyfish-dev/jellyfish:${FISHJAM_VERSION:-edge}'
     container_name: jellyfish
     restart: on-failure
     healthcheck:
@@ -14,15 +14,15 @@ services:
       start_period: 30s
     environment:
       JF_PORT: 5002
-      JF_HOST: "localhost:5002"
-      JF_WEBRTC_TURN_IP: "${EXTERNAL_IP:-127.0.0.1}"
-      JF_WEBRTC_TURN_LISTEN_IP: "0.0.0.0"
-      JF_WEBRTC_TURN_PORT_RANGE: "50000-50050"
-      JF_WEBRTC_TURN_TCP_PORT: "49999"
-      JF_SERVER_API_TOKEN: "development"
-      JF_CHECK_ORIGIN: "false"
+      JF_HOST: 'localhost:5002'
+      JF_WEBRTC_TURN_IP: '${EXTERNAL_IP:-127.0.0.1}'
+      JF_WEBRTC_TURN_LISTEN_IP: '0.0.0.0'
+      JF_WEBRTC_TURN_PORT_RANGE: '50000-50050'
+      JF_WEBRTC_TURN_TCP_PORT: '49999'
+      JF_SERVER_API_TOKEN: 'development'
+      JF_CHECK_ORIGIN: 'false'
     ports:
-      - "5002:5002"
-      - "49999:49999"
-      - "50000-50050:50000-50050/udp"
-    network_mode: "host"
+      - '5002:5002'
+      - '49999:49999'
+      - '50000-50050:50000-50050/udp'
+    network_mode: 'host'
