Add prettier to room-manager (#52)
## Description

It looks like Room manager project was missing format check. Let's fix
it.

## Motivation and Context

Let's have prettier configured for all our repos

## Types of changes

- [ ] Bug fix (non-breaking change which fixes an issue)
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to
      not work as expected)

--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -7,7 +7,9 @@
     "build": "tsc -p tsconfig.json",
     "start": "tsx watch ./src/index.ts",
     "gen:openapi": "tsx scripts/generate-openapi-schema.ts",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "author": "Fishjam Cloud Team",
   "dependencies": {
