--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "packageManager": "yarn@4.4.0",
   "devDependencies": {
+    "prettier": "^3.3.3",
     "typedoc": "^0.26.7",
     "typedoc-material-theme": "^1.1.0",
     "typescript": "^5.6.2"
@@ -14,6 +15,8 @@
   "scripts": {
     "build": "yarn workspaces foreach -At run build",
     "typecheck": "yarn workspaces foreach -A -p run typecheck",
+    "format:check": "yarn workspaces foreach -A -p run format:check",
+    "format": "yarn workspaces foreach -A -p run format",
     "docs": "typedoc"
   }
 }
