--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -9,7 +9,8 @@
     "gen:openapi": "tsx scripts/generate-openapi-schema.ts",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "lint": "eslint . "
   },
   "author": "Fishjam Cloud Team",
   "dependencies": {
