--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   ],
   "packageManager": "yarn@4.4.0",
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "eslint": "^9.11.1",
+    "globals": "^15.10.0",
     "prettier": "^3.3.3",
     "typedoc": "^0.26.7",
     "typedoc-material-theme": "^1.1.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   },
   "scripts": {
     "build": "yarn workspaces foreach -At run build",
+    "lint": "yarn workspaces foreach -At run lint",
     "typecheck": "yarn workspaces foreach -A -p run typecheck",
     "format:check": "yarn workspaces foreach -A -p run format:check",
     "format": "yarn workspaces foreach -A -p run format",
