Configure for js-server-sdk

--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -31,7 +31,8 @@
     "build": "tsup",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint ."
   },
   "tsup": {
     "entry": [
