--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -32,7 +32,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint ."
+    "lint": "eslint . --fix",
+    "lint:check": "eslint . "
   },
   "tsup": {
     "entry": [
