[FCE-657] Add eslint to repo (#59)
Description
Enable eslint in repo with default rules

Motivation and Context
Let's have at some lint checks in this repo enabled

--- a/examples/room-manager/package.json
+++ b/examples/room-manager/package.json
@@ -9,7 +9,9 @@
     "gen:openapi": "tsx scripts/generate-openapi-schema.ts",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "lint": "eslint . --fix",
+    "lint:check": "eslint . "
   },
   "author": "Fishjam Cloud Team",
   "dependencies": {
