fix openapi gen

--- a/.github/workflows/static.yaml
+++ b/.github/workflows/static.yaml
@@ -40,12 +40,12 @@ jobs:
         run: yarn typecheck
 
       - name: Generate reference room manager openapi
-        run: yarn generate:openapi ref.yaml
+        run: yarn gen:openapi ref.yaml
 
       - name: Compare reference room manager openapi
         run: |
           RM_PATH=examples/room-manager
           if ! cmp --silent "$RM_PATH/openapi.yaml" "$RM_PATH/ref.yaml"; then
-            echo "OpenAPI spec is out of date. Please run 'yarn generate:openapi' and commit the changes."
+            echo "OpenAPI spec is out of date. Please run 'yarn gen:openapi' and commit the changes."
             exit 1
           fi
