--- a/.github/workflows/build-room-manager-amd64.yaml
+++ b/.github/workflows/build-room-manager-amd64.yaml
@@ -1,7 +1,7 @@
-name: Build and Push Room Manager Image
+name: Build and Push Room Manager Multiplatform Image
 
 on:
-  push:
+  pull_request:
     branches: [main]
     paths:
       - 'examples/room-manager/**'
@@ -17,10 +17,6 @@ jobs:
         steps:
             - name: Checkout Repository
               uses: actions/checkout@v4
-            - name: Set up QEMU
-              uses: docker/setup-qemu-action@v3
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
             - name: Login to GitHub Container Registry
               uses: docker/login-action@v3
               with:
@@ -31,8 +27,8 @@ jobs:
               uses: docker/build-push-action@v6
               with:
                 file: examples/room-manager/Dockerfile
-                platforms: linux/amd64, linux/arm64
+                platforms: linux/amd64
                 push: true
                 cache-from: type=gha
                 cache-to: type=gha,mode=max
-                tags: ghcr.io/${{ github.repository }}/room-manager:latest
+                tags: ghcr.io/${{ github.repository }}/room-manager:${{ github.sha }}
