--- a/.github/workflows/build-room-manager-amd64.yaml
+++ b/.github/workflows/build-room-manager-amd64.yaml
@@ -17,6 +17,8 @@ jobs:
         steps:
             - name: Checkout Repository
               uses: actions/checkout@v4
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
             - name: Login to GitHub Container Registry
               uses: docker/login-action@v3
               with:
@@ -31,4 +33,4 @@ jobs:
                 push: true
                 cache-from: type=gha
                 cache-to: type=gha,mode=max
-                tags: ghcr.io/${{ github.repository }}/room-manager:${{ github.sha }}
+                tags: ghcr.io/${{ github.repository }}/room-manager:${{ github.event.pull_request.head.sha }}
