--- a/.github/workflows/build-room-manager-multiplatform.yaml
+++ b/.github/workflows/build-room-manager-multiplatform.yaml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-    build-and-push-image:
+    build-and-push-multiplatform-image:
         runs-on: ubuntu-latest
         permissions:
             contents: read
