Update script name

--- a/packages/fishjam-proto/package.json
+++ b/packages/fishjam-proto/package.json
@@ -21,7 +21,7 @@
     ".": "./dist/index.js"
   },
   "scripts": {
-    "codegen": "sh protobuf.sh",
+    "gen:proto": "sh protobuf.sh",
     "build": "tsup",
     "typecheck": "tsc --noEmit"
   },
