--- a/packages/fishjam-openapi/package.json
+++ b/packages/fishjam-openapi/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@fishjam-cloud/fishjam-openapi",
   "version": "0.3.0",
+  "private": true,
   "description": "Fishjam OpenAPI",
   "homepage": "https://github.com/fishjam-cloud/js-server-sdk",
   "author": "Fishjam Cloud Team",
