--- a/packages/fishjam-openapi/package.json
+++ b/packages/fishjam-openapi/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Fishjam OpenAPI",
   "homepage": "https://github.com/fishjam-cloud/js-server-sdk",
-  "author": "Fishjam Cloud Team",
+  "author": "Fishjam Team",
   "repository": {
     "type": "git",
     "url": "https://github.com/fishjam-cloud/js-server-sdk.git"
