--- a/packages/js-server-sdk/package.json
+++ b/packages/js-server-sdk/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "description": "Fishjam server SDK for JavaScript",
   "homepage": "https://github.com/fishjam-cloud/js-server-sdk",
-  "author": "Fishjam Cloud Team",
+  "author": "Fishjam Team",
   "repository": {
     "type": "git",
     "url": "https://github.com/fishjam-cloud/js-server-sdk.git"
